--- a/ytdlp.conf
+++ b/ytdlp.conf
@@ -5,8 +5,8 @@
 -i
 
 # Archive Settings
---download-archive /configs/youtube-dl-archive.txt
--a /configs/youtube-dl-channels.txt
+--download-archive /configs/ytdlp-archive.txt
+-a /configs/ytdlp-channels.txt
 
 # reverse playlist (for plex sort by date)
 --playlist-reverse  
@@ -39,6 +39,3 @@
 # Debug
 #--no-warnings
 -v
-
-# enable youtube-dl 429 bypass hack
---youtube-bypass-429
