--- a/ytdlp.conf
+++ b/ytdlp.conf
@@ -2,7 +2,7 @@
 -o "/downloads/%(uploader)s [%(channel_id)s]/%(upload_date)s - %(title)s - (%(duration)ss) [%(resolution)s] [%(id)s].%(ext)s"
 
 # ignore errors (so doesn't hang on region locks, etc)
--i
+--ignore-errors
 
 # Archive Settings
 --download-archive /configs/ytdlp-archive.txt
@@ -18,6 +18,10 @@
 --prefer-ffmpeg
 --merge-output-format mkv
 
+# cleanup filenames
+--restrict-filenames
+--windows-filenames
+
 # Get All Subs to SRT
 --write-sub
 --all-subs
@@ -28,13 +32,26 @@
 # Get metadata
 --add-metadata
 --write-description
+--write-info-json 
+--convert-thumbnails "png"
 --embed-thumbnail
+--embed-chapters
 --write-thumbnail
 --write-info-json
 --write-annotations
+--write-comments
 
 # Limit downloads
 #--dateafter now-1month
+
+# force ipv4
+--force-ipv4
+
+# throttle requests
+--sleep-requests 1 
+--sleep-interval 5 
+--max-sleep-interval 30 
+
 
 # Debug
 #--no-warnings
