--- a/ytdlp.conf
+++ b/ytdlp.conf
@@ -23,22 +23,22 @@
 --windows-filenames
 
 # Get All Subs to SRT
---write-sub
 --all-subs
 --embed-subs
 --convert-subs srt
 
 
 # Get metadata
---add-metadata
+--embed-metadata
 --write-description
---write-info-json 
+--write-info-json
 --convert-thumbnails "png"
 --embed-thumbnail
 --embed-chapters
+--embed-info-json
+--embed-subs    
 --write-thumbnail
 --write-info-json
---write-annotations
 --write-comments
 
 # Limit downloads
